src/test/ui/disambiguate-identical-names.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/disambiguate-identical-names.rs:13:5
   |
LL |     test(&v);
   |     ^^^^^--^
   |          |
   |          expected `&std::vec::Vec<std::vec::Vec<u32>>`, found `&HashMap<u8, u8>`
   |
note: function defined here
  --> $DIR/disambiguate-identical-names.rs:6:4
   |
LL | fn test(_v: &Vec<Vec<u32>>) {
   |    ^^^^ ------------------
help: provide an argument of the correct type
   |
LL |     test({&std::vec::Vec<std::vec::Vec<u32>>});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
